图片保存到ftp增加响应速度
