# api/imgcropper/service/imgcropper.pb.validate.go
@@ -79,6 +79,8 @@ func (m *CropImgRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
+	// no validation rules for Refresh
+
 	if len(errors) > 0 {
 		return CropImgRequestMultiError(errors)
 	}
